--- a/_includes/resume/education.liquid
+++ b/_includes/resume/education.liquid
@@ -36,9 +36,15 @@
         </div>
         <div class="col-xs-10 cl-sm-10 col-md-10 mt-2 mt-md-0">
           <h6 class="title font-weight-bold ml-1 ml-md-4">
-            <a href="{{ content.url }}">{{ content.studyType }}</a>
+            {{ content.studyType }}
           </h6>
-          <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem">{{ content.institution }}</h6>
+          <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem">
+            {% if content.url %}
+              <a href="{{ content.url }}">{{ content.institution }}</a>
+            {% else %}
+              {{ content.institution }}
+            {% endif %}
+          </h6>
           <h6 class="ml-1 ml-md-4" style="font-size: 0.95rem; font-style: italic">{{ content.area }}</h6>
           <ul class="items">
             {% for item in content.courses %}
