--- a/_includes/resume/languages.liquid
+++ b/_includes/resume/languages.liquid
@@ -21,7 +21,7 @@
                 <a 
                   href="{{ content.pdf | prepend: 'assets/pdf/' | relative_url}}" 
                   target="_blank">
-                  {{ content.language }}
+                  <u>{{ content.language }}</u>
                 </a>
               {% else %}
                 {{ content.language }}
